Fix crash in gst_mf_dshow_enum_device
According to the MSDN documentation here: https://learn.microsoft.com/en-us/previous-versions/ms784969(v=vs.85)
the result of CreateClassEnumerator
must be checked directly against S_OK
. The gst_mf_result() function uses FAILED or SUCCEEDED internally and the test succeeds despite the actual ComPtr being null, and lateron this results in a crash during enum_moniker->Next
The attached patch uses correct approach to check the result: 702f52d054bf6b13e80f2ce7b779f068ab1fe7f5.patch
This was tested on gstreamer 1.21.2.